fix: Remove duplicate console, refactored application to run through process_single_organization

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ snyk_matches_*.csv
 snyk_users_*.csv
 test_false_positives.csv
 snyk_severity_report_*.txt
+*.csv
 
 # Generated JSON output files
 *_output.json
