feat: Add GitHub integration and repository name matching
- Add GitHub API integration with PyGithub for fetching repository files
- Add --github-token, --github-properties-file, --github-property-name flags
- Add --repo-name-matching flag for migration scenarios
- Support fetching properties from appsec.properties files
- Add repository name extraction and matching logic
- Update both traditional and DataFrame matching methods
- Add comprehensive error handling and caching
- Update README with GitHub integration documentation
- Add PyGithub and pandas to requirements.txt
- Update .gitignore to exclude temporary analysis files

--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,10 @@ __pycache__/
 
 # Examples and test files
 snyk_user_provisioning_report.py
+
+# Temporary analysis and test files
+tmp/
+comprehensive_robthreefold_analysis_*.txt
+snyk_test_comparison_*.txt
+large_test_dataset*.csv
+large_test_dataset*.txt
