--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,18 @@
-certifi==2025.7.14
-charset-normalizer==3.4.2
-idna==3.10
-requests==2.32.4
+certifi==2025.10.5
+cffi==2.0.0
+charset-normalizer==3.4.4
+cryptography==46.0.2
+idna==3.11
+numpy==2.3.3
+pandas==2.3.3
+pycparser==2.23
+PyGithub==2.8.1
+PyJWT==2.10.1
+PyNaCl==1.6.0
+python-dateutil==2.9.0.post0
+pytz==2025.2
+requests==2.32.5
+six==1.17.0
+typing_extensions==4.15.0
+tzdata==2025.2
 urllib3==2.5.0
-PyGithub==2.1.1
-pandas==2.1.4
